Added getEvent endpoint support
