# backend/docs/swagger.yaml
@@ -12,14 +12,22 @@ definitions:
     properties:
       createdAt:
         type: string
+      date:
+        type: string
       deletedAt:
         $ref: '#/definitions/gorm.DeletedAt'
       description:
         type: string
-      details:
-        type: string
       id:
-        type: integer
+        type: string
+      image:
+        type: string
+      interests:
+        items:
+          type: string
+        type: array
+      location:
+        type: string
       name:
         type: string
       updatedAt:
@@ -48,7 +56,7 @@ paths:
       - Events
   /api/getEvent:
     get:
-      description: Endpoint used to get all events from db.
+      description: Endpoint used to get an events from db based on id.
       responses:
         "200":
           description: OK
@@ -59,6 +67,21 @@ paths:
           schema:
             type: object
       summary: Get Event
+      tags:
+      - Events
+  /api/getEvents:
+    get:
+      description: Endpoint used to get all events from db.
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Event'
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Get Events
       tags:
       - Events
   /api/searchEvent:
